fix text align

--- a/assets/scss/component/home-page/_marketplace.scss
+++ b/assets/scss/component/home-page/_marketplace.scss
@@ -9,6 +9,7 @@
 
     .marketplace-container {
         position: relative;
+        z-index: 3;
 
         &:before {
             content: '';
